add: socket structure

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,108 @@
         <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet-parent</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet-parent</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown.vertx</groupId>
+            <artifactId>vertx-httpservlet-parent</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown</groupId>
+            <artifactId>vertx-mod-httpservlet</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown</groupId>
+            <artifactId>vertx-mod-httpservlet</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.englishtown</groupId>
+            <artifactId>vertx-mod-httpservlet</artifactId>
+            <version>0.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.officefloor.server</groupId>
+            <artifactId>officeserver_servlet_test</artifactId>
+            <version>3.40.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.officefloor.server</groupId>
+            <artifactId>officeserver_servlet_test</artifactId>
+            <version>3.40.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.officefloor.tutorial</groupId>
+            <artifactId>HttpServletHttpServer</artifactId>
+            <version>3.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.officefloor.tutorial</groupId>
+            <artifactId>HttpServletHttpServer</artifactId>
+            <version>3.17.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-2.5</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-2.5</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-3.0</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-3.0</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.luismanuelamengual</groupId>
+            <artifactId>NeoGroup-HttpServer</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-3.0</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ericsson.research.trap.transports</groupId>
+            <artifactId>http-server-servlet-3.0</artifactId>
+            <version>1.4.2</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
