--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,12 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version>
+        </dependency>
+
     </dependencies>
 
 
