--- a/pom.xml
+++ b/pom.xml
@@ -9,89 +9,27 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
     <dependencies>
         <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet</artifactId>
-            <version>2.2.1</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.7.1</version>
         </dependency>
-        <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet-parent</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet-parent</artifactId>
-            <version>2.2.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.englishtown.vertx</groupId>
-            <artifactId>vertx-httpservlet-parent</artifactId>
-            <version>2.2.1</version>
-        </dependency>
+
         <dependency>
             <groupId>com.englishtown</groupId>
             <artifactId>vertx-mod-httpservlet</artifactId>
             <version>0.1.0</version>
         </dependency>
-        <dependency>
-            <groupId>com.englishtown</groupId>
-            <artifactId>vertx-mod-httpservlet</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>com.englishtown</groupId>
-            <artifactId>vertx-mod-httpservlet</artifactId>
-            <version>0.1.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.officefloor.server</groupId>
-            <artifactId>officeserver_servlet_test</artifactId>
-            <version>3.40.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.officefloor.server</groupId>
-            <artifactId>officeserver_servlet_test</artifactId>
-            <version>3.40.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.officefloor.tutorial</groupId>
-            <artifactId>HttpServletHttpServer</artifactId>
-            <version>3.17.0</version>
-        </dependency>
-        <dependency>
-            <groupId>net.officefloor.tutorial</groupId>
-            <artifactId>HttpServletHttpServer</artifactId>
-            <version>3.17.0</version>
-        </dependency>
+
         <dependency>
             <groupId>com.ericsson.research.trap.transports</groupId>
             <artifactId>http-server-servlet-2.5</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.ericsson.research.trap.transports</groupId>
-            <artifactId>http-server-servlet-2.5</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.ericsson.research.trap.transports</groupId>
-            <artifactId>http-server-servlet-3.0</artifactId>
             <version>1.4.2</version>
         </dependency>
         <dependency>
@@ -105,16 +43,6 @@
             <version>1.2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.ericsson.research.trap.transports</groupId>
-            <artifactId>http-server-servlet-3.0</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.ericsson.research.trap.transports</groupId>
-            <artifactId>http-server-servlet-3.0</artifactId>
-            <version>1.4.2</version>
-        </dependency>
-        <dependency>
             <groupId>org.mariadb.jdbc</groupId>
             <artifactId>mariadb-java-client</artifactId>
             <version>2.7.1</version>
@@ -122,17 +50,41 @@
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
-            <version>1.14.3</version>
+            <version>1.15.3</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
-
-
     </dependencies>
 
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.3.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>main.Main</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
